--- a/css/index.css
+++ b/css/index.css
@@ -114,6 +114,10 @@ body {
   margin-bottom: 1rem;
 }
 
+.cta:hover {
+  text-decoration: underline;
+}
+
 .cta-img {
   width: 2.2rem;
   margin-right: .7rem;
