--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,11 @@ body {
   background-color: #5A8F69;
 }
 
+.cow {
+  position: absolute;
+  width: 5rem;
+}
+
 @media only screen and (min-width: 769px) {
   .hero {
     margin: -4rem auto 0;
