--- a/css/index.css
+++ b/css/index.css
@@ -80,10 +80,11 @@ body {
 }
 
 .nav-btn {
-  padding: .5rem 1rem;
+  padding: .5rem 1.5rem;
   border: 1px solid #000;
   border-radius: 4px;
   font-weight: 700;
+  font-size: 1.2rem;
 }
 
 .nav-btn:hover {
